LifeCounter v4.X.X changelog:
 * Fixed missing label in advanced settings

LifeCounter v4.12.1 changelog:
 * Added modal window for direct score editing - tap the score when the option is enabled in Advanced settings
 * Fixed bad heading of score history modal

Known issues:
 * You have to manually prevent your device from dimming the screen/locking itself when using the app

Known compatibility:
 * Firefox on Android
 * Chrome on Android
 * Edge
 * Firefox

---

LifeCounter v4.11.2 changelog:
 * Fixed broken play button of game time tracking when pages are changed
 * Fixed failing startup in Firefox for Android
 * After stopping game time, old time is displayed as separate blinking text

Known issues:
 * You have to manually prevent your device from dimming the screen/locking itself when using the app

Known compatibility:
 * Firefox on Android
 * Chrome on Android
 * Edge
 * Firefox

---

LifeCounter v4.10.6 changelog:
 * Added buttons for controlling game time tracker
 * Score history enabled by default
 * Fixed broken font sizes in settings
 * Fixed broken font sizes in toolbar
 * Fixed too big radio buttons on mobile browsers
 * Fixed language swapping (headers and toolbar buttons were not affected by language swap)
 * Segue UI Light used even on non-Windows devices

Known issues:
 * You have to manually prevent your device from dimming the screen/locking itself when using the app

---

LifeCounter v4.9.1 changelog:
 * Fixed broken countdown when resolution had changed
 * App was migrated to AppJs v2 (smaller size, faster loading)

---

LifeCounter v4.8.6 changelog:
 * Score history is now displayed on modal instead of system alert
 * Added chance button for explicitly picking the first player
 * Added game time tracking (enable in advanced options)
 * Fixed access to local storage
 * Fixed broken font sizes on big screens
 * Changed font apperance
 * Changed button labels
 * Changed icon of score history
 * Countdown tone uses smooth stop to be less annoying