@@ -96,7 +96,7 @@ button:active {
 .outline {
 	color: white;
 	text-shadow:
-		-1px -1px 0 #000,  
+		-1px -1px 0 #000,
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000;
@@ -120,4 +120,39 @@ button:active {
     50% {
         opacity: 0;
     }
+}
+
+.checkbox {
+	border: 2px solid rgb(176, 176, 176);
+	cursor: pointer;
+	padding: 5px;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+}
+
+.checkbox[disabled] {
+	border: 2px solid rgb(69, 69, 69);
+}
+
+.checkbox>label {
+	cursor: pointer;
+	position: initial !important;
+	left: initial !important;
+	top: initial !important;
+	width: 100% !important;
+	height: 100% !important;
+	background: rgb(31, 31, 31);
+}
+
+.checkbox>input {
+	display: none;
+}
+
+.checkbox>input:checked + label {
+	background: white;
+}
+
+.checkbox>input:disabled + label {
+	background: black;
 }
